updated style.css to reduce space between paragrap

--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ a {
     	color: #888888
 }
 
+.box p{
+	margin: -5%;
+	padding: -5%;
+}
+
 @keyframes change {
     	0%  { color:  #0f0; }
     	50% { color:  #0f0; }
